                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.5.2

  *) apr_crypto: If --with-crypto is passed to configure but no crypto
     libraries are enabled, autodetect available libraries.  [Jeff Trawick]

  *) memcache: Fix dead server retry logic.  [Gavin Shelley <columbusmonkey me.com>]

Changes with APR-util 1.5.1

  *) testmemcache: Fix crash. PR 52705. [Peter Poeml <peter poeml de>]

  *) MinGW: Support shared builds of apr-util when apr is shared.
     PR 46175.  [Carlo Bramini <carlo.bramix libero.it>, Jeff Trawick]

  *) Add support for Berkeley DB 5.2 and 5.3. Simplify detection script.
     PR 53684.  [Rainer Jung]

  *) configure: Allow to specify library specific custom linker flags
     via the LDADD_XXX variables. [Rainer Jung]

  *) apr_password_validate(): Fix intermittent errors on systems
     such as FreeBSD where the crypt() function is used.
     (Broken only in 1.5.0)  [Jeff Trawick]

  *) Improve platform detection for bundled expat by updating
     config.guess and config.sub. [Rainer Jung]

Changes with APR-util 1.5.0

  *) dbd_pgsql_escape: Use PQescapeStringConn. [Nick Kew]

  *) apr_password_validate, apr_bcrypt_encode: Add support for bcrypt encoded
     passwords. The bcrypt implementation uses code from crypt_blowfish
     written by Solar Designer <solar openwall com>. apr_bcrypt_encode creates
     hashes with "$2y$" prefix, but apr_password_validate also accepts the old
     prefix "$2a$". PR 49288. [Stefan Fritsch]

  *) APR dbd: Allow to use apr_dbd_get_row() with a different pool than
     apr_dbd_select(). PR 53533. [<arthur echo gmail com>]

  *) APR dbd FreeTDS support: Fix spurious API errors caused by uninitialized
     fields.  [TROY.LIU 劉春偉 <TROY.LIU deltaww.com.cn>]

  *) apr_password_validate: Increase maximum hash string length to allow
     more than 9999 rounds with sha512-crypt. PR 53410. [Stefan Fritsch]

  *) Fix segfaults in crypt() and crypt_r() failure modes.