@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.5.2
 
+  *) Remove duplicated logic in apr_brigade_puts(). PR 53740. [Christophe
+     Jaillet <christophe jaillet wanadoo fr>]
+
   *) apr_crypto: If --with-crypto is passed to configure but no crypto
      libraries are enabled, autodetect available libraries.  [Jeff Trawick]
 
